# lzc-sdk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-13-full-rust-sdk.md
docs/superpowers/specs/: 2026-07-13-full-rust-sdk-design.md
examples/: api_gateway.rs  device_proxy.rs
proto/: MANIFEST.sha256  SOURCE_MANIFEST.sha256  UPSTREAM.md
proto/cloud/lazycat/apis/common/: apk_shell.proto  box.proto  browseronly.proto  end_device.proto  file_handler.proto  filetrans.proto  gateway.proto  iscsi.proto  media_meta.proto  message.proto  peripheral_device.proto  security_context.proto  users.proto
proto/cloud/lazycat/apis/localdevice/: ble.proto  client.proto  cloud-driver.proto  config.proto  contacts.proto  device.proto  dialog.proto  local-launch.proto  network.proto  notification.proto  oneway-sync.proto  permission.proto  photo.proto  remote-control.proto  remote-input-method.proto
proto/cloud/lazycat/apis/sys/: btled.proto  btrfs.proto  devopt.proto  dirmon.proto  event.proto  hal.proto  hserver.proto  ingress.proto  network_manager.proto  package_manager.proto  tvos.proto  version.proto
proto/io/containerd/cgroups/v2/: cgroup_metrics.proto
proto/lzc/dlna/: dlna.proto
scripts/: generate.sh  sync-protos.sh
src/: auth.rs  connection.rs  credentials.rs  device_transport.rs  error.rs  gateway.rs  hserver.rs  lib.rs  metadata.rs  peer.rs  service_address.rs  service_status.rs
src/remotesocks/: address.rs  client.rs  mod.rs  tcp.rs  udp.rs
tests/: connection.rs  device_auth.rs  fixtures.rs  gateway.rs  hserver.rs  proto_manifest.rs  remotesocks_tcp.rs  remotesocks_udp.rs
